# aws_ml_eng_project_stock_prediction

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.githooks/: check-version.sh
.github/actions/install-poetry/: action.yml
.github/workflows/: build-and-test.yml
data/data_exploration/: top_etfs.csv
docs/: project_proposal.md
docs/project_proposal/: project_proposal.tex
docs/project_proposal/bibliography/: biblio.bib
docs/report/final_report/: full_article.tex
docs/report/final_report/bibliography/: biblio.bib  converted_to_latex.bib
docs/report/final_report/figures/arch/: config.yml
docs/report/final_report/figures/output/: config.yml
docs/report/final_report/figures/output1/: config.yml
docs/report/final_report/figures/output10/: config.yml
docs/report/final_report/figures/output11/: config.yml
docs/report/final_report/figures/output2/: config.yml
docs/report/final_report/figures/output3/: config.yml
experiments/baselines/: arima_baselines.ipynb  lightgbm.ipynb  simple_baselines.ipynb
experiments/data_exploration/: data_understanding_and_cleaning.ipynb  etfs_selection.ipynb
scripts/: setup_environment.sh
stock_prediction/: commons.py
stock_prediction/dashboard/: dashboard.py
stock_prediction/dashboard/assets/: bWLwgP.css
stock_prediction/data_exploration/: kaggle_etfs.py
stock_prediction/deployment/: README.md  ami_creator.py  daily_retraining_pipeline_deployer.py  dashboard_deployer.py  deployer.py  lambda_launch_instance_with_ttl.py  lambda_terminate_by_ttl.py  utils.py
stock_prediction/etl/: ticker_data_extractors.py
stock_prediction/evaluation/: analysis.py
stock_prediction/helpers/logging/: log_config.py
stock_prediction/modeling/: arima.py  baselines.py  forecast_model.py  lightgbm.py  lightgbm_model.py  sklearn_api_based.py  train.py
stock_prediction/utils/: series.py
tests/unit/stock_prediction/: test_dummy.py
(+19 files in other folders)
