[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"


[tool.poetry]
name = "stock_prediction"
version = "0.1.2"
description = ""
authors = ["Marco Sampaio <marcoopsampaio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "*"
matplotlib = "*"
scikit-learn = "*"

[tool.poetry.dev-dependencies]
isort = "*"
ipython = "^8.10.0"
pytest = "^6.0"
pytest-cov = "*"
pytest-env = "*"
black = {version = "^22.10.0", extras = ["jupyter", "d"]}
flake8 = "^4.0.1"
flake8-docstrings = "*"
flake8-mypy = "*"
mypy = "^1.5.1"
pre-commit = "^2.17.0"
types-PyYAML = "*"
types-freezegun = "*"
types-requests = "^2.28.0"
filelock = "*"
virtualenv = "*"
distlib = "*"
coverage = "7.5.4"
jupyter = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
