[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"


[tool.poetry]
name = "stock_prediction"
version = "0.1.12"
description = ""
authors = ["Marco Sampaio <marcoopsampaio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
pandas = "*"
matplotlib = "*"
scikit-learn = "*"
quantstats = "*"
statsmodels = "^0.14.2"
statsforecast = "^1.7.8"
lightgbm = "^4.5.0"
plotly = "^5.24.1"
dash = "^2.18.2"
boto3 = "^1.35.81"

[tool.poetry.dev-dependencies]
isort = "*"
ipython = "^8.10.0"
pytest = "*"
pytest-cov = "*"
pytest-env = "*"
black = {version = "^22.10.0", extras = ["jupyter", "d"]}
flake8 = "^4.0.1"
flake8-docstrings = "*"
flake8-mypy = "*"
mypy = "^1.5.1"
pre-commit = "^2.17.0"
types-PyYAML = "*"
types-freezegun = "*"
types-requests = "^2.28.0"
filelock = "*"
virtualenv = "*"
distlib = "*"
coverage = "7.5.4"
jupyter = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
